--- a/template/index.html
+++ b/template/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <title>{{ name }}</title>
+    <link rel="Shortcut Icon" href="./src/assets/vux_logo.png" type="img/x-icon">
   </head>
   <body>
     <div id="app-box"></div>
